[metadata]
name = geoguessr
version = 0.0.1
description = 3rd party API for accessing Geoguessr challenge scores
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaceiverson/geoguessr
project_urls = 
    Bug Tracker = https://github.com/jaceiverson/geoguessr/issues
author = Jace Iverson
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir = 
    =src
packages =
    geoguessr
install_requires =
    requests
    python-dotenv
    pandas
python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
geoguessr = py.typed

[flake8]
max-line-length = 160
exclude = src/geoguessr/__init__.py